# Copyright 2002-2008 Gentoo Foundation; 2008 Chris Gianelloni, Andrew Gaffney
# Distributed under the GPL v2

  31 Oct 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> README:
  Updated README to tell the user where to locate catalyst.conf if not using
  an ebuild. Thanks to Claus Boehmer <Claus.Boehmer@gmx.de> for pointing it
  out.

  31 Oct 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> catalyst:
  Kicking out a 2.0.6.901 release for testing.

  29 Sep 2008; Andrew Gaffney <agaffney@gentoo.org>
  modules/generic_stage_target.py:
  Automatically prepend build dir path to livecd/iso if it's not an absolute
  path.

  28 Sep 2008; Andrew Gaffney <agaffney@gentoo.org> TODO:
  Update TODO with placeholder idea.

  07 Sep 2008; Andrew Gaffney <agaffney@gentoo.org> catalyst,
  +modules/catalyst/util.py:
  Create catalyst.util module with capture_traceback() and print_traceback()
  functions Capture and print traceback when build fails instead of letting
  python do it.

  07 Sep 2008; Andrew Gaffney <agaffney@gentoo.org> catalyst,
  modules/catalyst/config.py, modules/catalyst_support.py:
  Switch commandline spec value parsing to use catalyst.config.ConfigParser.

  07 Sep 2008; Andrew Gaffney <agaffney@gentoo.org> catalyst,
  modules/catalyst/config.py:
  A few fixes to ParserBase after actually testing it switch to parsing
  config file with ConfigParser.

  07 Sep 2008; Andrew Gaffney <agaffney@gentoo.org> catalyst,
  +modules/catalyst/config.py, -modules/catalyst/util.py:
  More indecisiveness..move util.spec to config.SpecParser.

  06 Sep 2008; Andrew Gaffney <agaffney@gentoo.org> catalyst,
  -modules/catalyst/spec.py, +modules/catalyst/util.py,
  modules/catalyst_support.py:
  * Rename catalyst.spec to catalyst.util
  * Move spec_dump() into spec class
  * Modify catalyst to use new spec class

  06 Sep 2008; Andrew Gaffney <agaffney@gentoo.org> catalyst,
  +modules/catalyst/__init__.py:
  Add __init__.py file and import line.
