@@ -1,6 +1,10 @@
 # Copyright 2002-2008 Gentoo Foundation; 2008 Chris Gianelloni, Andrew Gaffney
 # Distributed under the GPL v2
 
+  29 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> catalyst,
+  modules/catalyst_support.py, modules/generic_stage_target.py:
+  Add support for -P/--purgeonly option
+
   31 Oct 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> README:
   Updated README to tell the user where to locate catalyst.conf if not using
   an ebuild. Thanks to Claus Boehmer <Claus.Boehmer@gmx.de> for pointing it
